tests/hevm/fail/multi/multi.act
contract A

constructor(uint z)

iff
   inRange(uint256, z + 42)

creates
   uint x := z + 42

transition set_x(uint z)

updates
   x := z


contract B

constructor(uint v)

iff
   // This condition must be present for equivalence check to pass
   // inRange(uint256, v + 42)

creates
   uint y := 0
   A a := new A(v)
